--- a/res/layout/rest.xml
+++ b/res/layout/rest.xml
@@ -15,6 +15,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="开始JSON请求" />
+    <Button
+        android:id="@+id/rest_custonTestBtn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="自定义转化器测试" />
 
     <TextView
         android:id="@+id/rest_infoView"
