--- a/res/layout/rest.xml
+++ b/res/layout/rest.xml
@@ -20,6 +20,12 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="自定义转化器测试" />
+    
+    <Button
+        android:id="@+id/rest_asyncTestBtn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="async测试" />
 
     <TextView
         android:id="@+id/rest_infoView"
