--- a/res/layout/dbtest.xml
+++ b/res/layout/dbtest.xml
@@ -106,6 +106,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="数据库异步事务操作测试" />
+            <Button
+                android:id="@+id/dt_sqlToMapBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="通过sql得到map" />
+            <Button
+                android:id="@+id/dt_sqlToObjectBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="通过sql得到Object" />
         </LinearLayout>
     </ScrollView>
 
