--- a/res/layout/rest.xml
+++ b/res/layout/rest.xml
@@ -4,57 +4,80 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/rest_testBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="开始REST请求" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/rest_jsonTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="开始JSON请求" />
-    <Button
-        android:id="@+id/rest_custonTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="自定义转化器测试" />
-    
-    <Button
-        android:id="@+id/rest_asyncTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="async测试" />
-    
-    <Button
-        android:id="@+id/rest_queneTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="队列任务测试" />
-    <Button
-        android:id="@+id/rest_mineTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="队列任务测试" />
-	<Button
-        android:id="@+id/rest_mine1TestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="队列任务测试1" />
-	<Button
-        android:id="@+id/rest_cacheTestBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="队列缓存测试" />
-	<Button
-        android:id="@+id/rest_cacheTestBtn11"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="队列缓存测试(请求参数不一样)" />
-    <TextView
-        android:id="@+id/rest_infoView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/rest_testBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="开始REST请求" />
+
+            <Button
+                android:id="@+id/rest_jsonTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="开始JSON请求" />
+
+            <Button
+                android:id="@+id/rest_custonTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="自定义转化器测试" />
+
+            <Button
+                android:id="@+id/rest_asyncTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="async测试" />
+
+            <Button
+                android:id="@+id/rest_queneTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="队列任务测试" />
+
+            <Button
+                android:id="@+id/rest_mineTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="队列任务测试" />
+
+            <Button
+                android:id="@+id/rest_mine1TestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="队列任务测试1" />
+
+            <Button
+                android:id="@+id/rest_cacheTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="队列缓存测试" />
+
+            <Button
+                android:id="@+id/rest_cacheTestBtn11"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="队列缓存测试(请求参数不一样)" />
+
+            <Button
+                android:id="@+id/rest_sameTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="2个同样任务一起提交" />
+
+            <TextView
+                android:id="@+id/rest_infoView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
