--- a/res/layout/rest.xml
+++ b/res/layout/rest.xml
@@ -72,6 +72,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="2个同样任务一起提交" />
+            
+            <Button
+                android:id="@+id/rest_bodyTestBtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="带body参数的测试" />
 
             <TextView
                 android:id="@+id/rest_infoView"
