--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -2,16 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:gravity="center" >
     
     <TextView 
         android:id="@+id/li_infoView"
         android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:textColor="@android:color/white"
-    	android:textSize="18sp"
+    	android:layout_height="100dip"
+    	android:gravity="center"
+    	android:textColor="@android:color/black"
+    	android:textSize="20sp"
         />
     
+    <TextView 
+        android:id="@+id/li_ageView"
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:gravity="center"
+    	android:textColor="@android:color/black"
+    	android:layout_margin="5dip"
+    	android:textSize="20sp"
+        />
+    
+    <CheckBox 
+        android:id="@+id/li_checkBox"
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:focusable="false"
+    	android:focusableInTouchMode="false"
+        />
 
 </LinearLayout>
