--- a/res/layout/list_test.xml
+++ b/res/layout/list_test.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+    <Button 
+        android:id="@+id/lt_reflashBtn"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:text="点击后岁数小50的刷新"
+        />
     <ListView 
         android:id="@+id/lt_listView"
         android:layout_width="match_parent"
