--- a/res/layout/event_f1.xml
+++ b/res/layout/event_f1.xml
@@ -3,47 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <Button 
-        android:id="@+id/ef1_sendEventBtn1"
+
+    <ScrollView
         android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="通过TAG发送事件"
-        />
-    <Button 
-        android:id="@+id/ef1_sendEventBtn2"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="通过TAG发送事件AND自动注入"
-        />
-    <Button 
-        android:id="@+id/ef1_sendEventBtn3"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="通过只对象发送通过TAG发送事件"
-        />
-    <Button 
-        android:id="@+id/ef1_sendEventBtn4"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="发送全标识事件且不注入"
-        />
-	<Button 
-        android:id="@+id/ef1_sendEventBtn5"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="发送Flag事件且不注入"
-        />
-	
-	<Button 
-        android:id="@+id/ef1_sendEventBtn6"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="发送事件非主线程处理改UI肯定报错"
-        />
-	<Button 
-        android:id="@+id/ef1_sendEventBtn7"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:text="非主线程发送事件改UI"
-        />
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="通过TAG发送事件" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="通过TAG发送事件AND自动注入" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="通过只对象发送通过TAG发送事件" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="发送全标识事件且不注入" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="发送Flag事件且不注入" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="发送事件非主线程处理改UI肯定报错" />
+
+            <Button
+                android:id="@+id/ef1_sendEventBtn7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="非主线程发送事件改UI" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
