--- a/res/layout/nettest.xml
+++ b/res/layout/nettest.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@android:color/black">
-    <TextView 
+    android:background="@android:color/black"
+    android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/nt_futureBtn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="开始future请求" />
+
+    <TextView
         android:id="@+id/nt_infoView"
         android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:textColor="@android:color/white"
-        />
+        android:layout_height="match_parent"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
